# Platformer

./: .gitignore
Applikasjonen/GameApi/: GameApi.http  Program.cs
Applikasjonen/GameApi/Controllers/: GameController.cs
Applikasjonen/GameApi/Models/: LoginInfo.cs
Applikasjonen/GameApi/Properties/: launchSettings.json
Applikasjonen/PlatformerGame/: CMakeLists.txt  camera.c  camera.h  character.c  character.h  coin.c  coin.h  ground.c  ground.h  main.c  soundManager.c  soundManager.h  vector2d.c  vector2d.h
Applikasjonen/frontend/src/: App.tsx  index.css
